[project]
name = "core"
description = "Core Python environment"
readme = "README.md"
authors = [
    {name = "Yao-Yuan Mao"},
]
version = "2025.01.01"
requires-python = ">=3.12"
dependencies = [
    "abundancematching>=0.3",
    "artpop>=0.1",
    "astro-datalab>=2",
    "astroplan>=0.10",
    "astropy>=7",
    "astroquery>=0.4",
    "bottleneck>=1",
    "colossus>=1",
    "corner>=2",
    "easyquery>=0.4",
    "emcee>=3",
    "fast-histogram>=0.14",
    "fast3tree>=0.4",
    "fofcatalogmatching>=0.1",
    "halotools>=0.9",
    "healpy>=1",
    "helpers",
    "ipykernel>=6",
    "ipython>=8",
    "ipywidgets>=8",
    "jupyterlab-git>=0.50",
    "jupyterlab-myst>=2",
    "matplotlib>=3",
    "myplotstyle",
    "nbconvert>=7",
    "numpy>=1",
    "palettable>=3",
    "pandas>=2",
    "pillow>=11",
    "pyarrow>=18",
    "python-snappy>=0.7",
    "requests>=2",
    "saga",
    "scikit-image>=0.24",
    "scikit-learn>=1",
    "scipy>=1",
    "sep>=1",
    "statsmodels>=0.14",
    "tables>=3",
    "tqdm>=4",
]

[tool.uv.sources]
myplotstyle = { git = "https://github.com/yymao/myplotstyle.git", rev = "main" }
helpers = { git = "https://bitbucket.org/yymao/helpers.git", rev = "master" }
saga = { git = "https://github.com/sagasurvey/saga.git", rev = "master" }
